Salesforce/force-app/main/default/objects/Licence_Class_Grade__c/Licence_Class_Grade__c.object-meta.xml
<CustomObject>
    <description>This is a junction between licence class and licence grade.  
This object is intended to be the one place in Salesforce where licence class-grades need to be synced from BUILD.  The structure of this object is directly based on the data in the BUILD LicenceClassGrade table.</description>
    <label>Licence Class-Grade</label>
    <nameField>
        <displayFormat>LCG-{0}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Licence Class-Grades</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>