Salesforce/force-app/main/default/objects/Licence_Class_Grade__c/fields/Class_Grade_Code__c.field-meta.xml
<CustomField>
    <fullName>Class_Grade_Code__c</fullName>
    <description>The combined grade and class code for use as a unique identifier.</description>
    <externalId>true</externalId>
    <inlineHelpText>The combined grade and class code for use as a unique identifier.</inlineHelpText>
    <label>Class-Grade Code</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>