Salesforce/force-app/main/default/objects/Licence_Class_Grade__c/fields/From_Date__c.field-meta.xml
<CustomField>
    <fullName>From_Date__c</fullName>
    <description>The date when this class-grade becomes available.</description>
    <inlineHelpText>The date when this class-grade becomes available.</inlineHelpText>
    <label>From Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>