Salesforce/force-app/main/default/objects/Licence_Class_Grade__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <description>Is the licence class, grade, and class-grade combination active?</description>
    <formula>AND(
    Licence_Class__r.Is_Active__c,
    Licence_Grade__r.Is_Active__c,
    From_Date__c &lt;= TODAY(),
    OR(
        ISNULL(To_Date__c),
        To_Date__c &gt;= TODAY()
    )
)</formula>
    <inlineHelpText>Is the licence class, grade, and class-grade combination active?</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>