Salesforce/force-app/main/default/objects/Licence_Class_Grade__c/fields/Licence_Class__c.field-meta.xml
<CustomField>
    <fullName>Licence_Class__c</fullName>
    <label>Licence Class</label>
    <referenceTo>Licence_Class__c</referenceTo>
    <relationshipLabel>Licence Class-Grades</relationshipLabel>
    <relationshipName>Licence_Class_Grades</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>