Salesforce/force-app/main/default/objects/Licence_Class_Grade__c/fields/Licence_Grade__c.field-meta.xml
<CustomField>
    <fullName>Licence_Grade__c</fullName>
    <label>Licence Grade</label>
    <referenceTo>Licence_Grade__c</referenceTo>
    <relationshipLabel>Licence Class-Grades</relationshipLabel>
    <relationshipName>Licence_Class_Grades</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>