Salesforce/force-app/main/default/objects/Licence_Class_Grade__c/fields/To_Date__c.field-meta.xml
<CustomField>
    <fullName>To_Date__c</fullName>
    <description>The date when this class-grade is no longer available.</description>
    <inlineHelpText>The date when this class-grade is no longer available.</inlineHelpText>
    <label>To Date</label>
    <type>Date</type>
</CustomField>